--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -43,6 +43,9 @@
                     <button type="submit" class="btn btn-primary">Entrar</button>
                 </div>
             </form>
+            <br>
+            <hr>
+            <a th:href="@{/oauth2/authorization/google}" class="btn btn-primary">Google</a>
         </div>
     </div>
 </div>
